--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "next-auth": "^4.24.7",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
