--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
     "@neondatabase/serverless": "^0.9.3",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.48.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
