Implement menu animation and optimize homepage

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.9",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -35,6 +36,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.15.1",
